<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home2"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/Home" />
    <item
        android:id="@+id/TV"
        android:icon="@drawable/baseline_airplay_24"
        android:title="@string/TV" />


    <item
        android:id="@+id/upload"
        android:icon="@drawable/baseline_add_circle_outline_24"
        android:title="@string/Upload" />
    <item
        android:id="@+id/explore"
        android:icon="@drawable/baseline_explore_24"
        android:title="@string/Explore" />

    <item
        android:id="@+id/my_Channel"
        android:icon="@drawable/baseline_account_box_24"
        android:title="@string/My_channel" />

</menu>